--- a/style.css
+++ b/style.css
@@ -73,6 +73,19 @@ body{
     .bg-pastel-red{
       background-color: #d39c7d;
     }
-      .flex-even {
-        flex: 1;
-      }
+    .flex-even {
+      flex: 1;
+    }
+    .map-container{
+      overflow:hidden;
+      padding-bottom:40%;
+      position:relative;
+      height:0;
+    }
+    .map-container iframe{
+      left:0;
+      top:0;
+      height:100%;
+      width:100%;
+      position:absolute;
+    }
