--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 }
 .cart {
   position: relative;
-  color: rgba(0, 0, 0, 0.55);
+  color: #000;
   font-size: 26px;
   padding-right: 5px;
 }
