--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   padding-top: 8em;
 }
-.img-size {
+.store-item-modal .img-size {
   /* 	padding: 0;
         margin: 0; */
   height: 450px;
@@ -9,20 +9,20 @@ body {
   background-size: cover;
   overflow: hidden;
 }
-.modal-content {
+.store-item-modal .modal-content {
   width: 700px;
   border: none;
 }
-.modal-body {
+.store-item-modal .modal-body {
   padding: 0;
 }
 
-.carousel-control-prev-icon {
+.store-item-modal .carousel-control-prev-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23009be1' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
   width: 30px;
   height: 48px;
 }
-.carousel-control-next-icon {
+.store-item-modal .carousel-control-next-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23009be1' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
   width: 30px;
   height: 48px;
@@ -88,4 +88,7 @@ body {
   height: 100%;
   width: 100%;
   position: absolute;
+}
+.recipe-item:hover {
+  cursor: pointer;
 }
