--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
-body {
-  padding-top: 8em;
+@font-face {
+  font-family: "Gatefold-Demibold";
+  src: url("./fonts/Gatefold-Demibold.woff") format("woff");
+}
+@font-face {
+  font-family: "GT Alpina";
+  src: url("./fonts/GT-Alpina-Standard-Regular.woff") format("woff");
+}
+@font-face {
+  font-family: "Ambit";
+  src: url("./fonts/Ambit-Light.woff") format("woff");
+}
+@font-face {
+  font-family: "Ambit Regular";
+  src: url("./fonts/Ambit-Regular.woff") format("woff");
 }
 .store-item-modal .img-size {
   /* 	padding: 0;
@@ -63,8 +76,19 @@ body {
 .bg-pastel-red {
   background-color: #d39c7d;
 }
-.font {
-  font-family: "Gatefold Demi", serif;
+.font-gatefold-demi {
+  font-family: "Gatefold Demibold", serif;
+  color: #00211a;
+}
+.font-gt-alpina {
+  font-family: "GT Alpina", serif;
+  
+}
+.font-ambit {
+  font-family: "Ambit", serif;
+}
+.font-ambit-regular{
+  font-family: "Ambit Regular", serif;
 }
 .bg-pastel-purple2 {
   background-color: #e7cbef;
@@ -91,4 +115,77 @@ body {
 }
 .recipe-item:hover {
   cursor: pointer;
+}
+/* GLOBAL STYLES
+-------------------------------------------------- */
+/* Padding below the footer and lighter body text */
+
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+/* Carousel base class */
+.carousel {
+  margin-bottom: 4rem;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  bottom: 3rem;
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+  height: 32rem;
+}
+
+/* MARKETING CONTENT
+-------------------------------------------------- */
+
+/* Center align the text within the three columns below the carousel */
+.marketing .col-lg-4 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+/* rtl:begin:ignore */
+.marketing .col-lg-4 p {
+  margin-right: 0.75rem;
+  margin-left: 0.75rem;
+}
+/* rtl:end:ignore */
+
+/* Featurettes
+------------------------- */
+
+.featurette-divider {
+  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+}
+
+/* Thin out the marketing headings */
+/* rtl:begin:remove */
+.featurette-heading {
+  letter-spacing: -0.05rem;
+}
+
+/* rtl:end:remove */
+
+/* RESPONSIVE CSS
+-------------------------------------------------- */
+
+@media (min-width: 40em) {
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.4;
+  }
+
+  .featurette-heading {
+    font-size: 50px;
+  }
+}
+
+@media (min-width: 62em) {
+  .featurette-heading {
+    margin-top: 7rem;
+  }
 }
