--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
 @font-face {
   font-family: "Gatefold-Demibold";
   src: url("./fonts/Gatefold-Demibold.woff") format("woff");
-  font-display: swap
+  font-display: swap;
 }
 @font-face {
   font-family: "GT Alpina";
   src: url("./fonts/GT-Alpina-Standard-Regular.woff") format("woff");
-  font-display: swap
+  font-display: swap;
 }
 @font-face {
   font-family: "Ambit";
   src: url("./fonts/Ambit-Light.woff") format("woff");
-  font-display: swap
+  font-display: swap;
 }
 @font-face {
   font-family: "Ambit Regular";
   src: url("./fonts/Ambit-Regular.woff") format("woff");
-  font-display: swap
+  font-display: swap;
 }
 .store-item-modal .img-size {
   height: 450px;
@@ -51,7 +51,7 @@
   font-size: 26px;
   padding-right: 5px;
 }
-.cart-amount {
+.cart-amount-div {
   position: absolute;
   height: 16px;
   width: 16px;
@@ -70,7 +70,7 @@
   background-color: #fde5dd;
 }
 .bg-pastel-yellow {
-  background-color: #ffeab2;
+  background-color: #ffffcc;
 }
 .bg-pastel-blue {
   background-color: #a2d2ff;
@@ -203,8 +203,17 @@
     margin-top: 7rem;
   }
 }
-.shop-item-add-to-cart:hover {
+.btn-pastel-pink {
+  background-color: #fde5dd !important;
+}
+.btn-pastel-pink:hover {
   background-color: #d39c7d !important;
+}
+.btn-pastel-yellow {
+  background-color: #ffffcc !important;
+}
+.btn-pastel-yellow:hover {
+  background-color: #ffff99 !important;
 }
 .store-item:hover {
   cursor: pointer;
@@ -222,9 +231,9 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
-.featurette-image-1{
+.featurette-image-1 {
   background-image: url(./images/featurette-1.webp);
 }
-.featurette-image-2{
+.featurette-image-2 {
   background-image: url(./images/featurette-2.webp);
 }
