--- a/style.css
+++ b/style.css
@@ -119,25 +119,17 @@
 .recipe-item:hover {
   cursor: pointer;
 }
-/* GLOBAL STYLES
--------------------------------------------------- */
-/* Padding below the footer and lighter body text */
-
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
-
-/* Carousel base class */
-.carousel {
-  margin-bottom: 4rem;
+.recipe-item:hover img {
+  transform: scale(1.02);
+  transition: transform 100ms linear;
 }
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  bottom: 3rem;
-  z-index: 10;
+
+.carousel-frontpage {
+  margin-bottom: 4rem;
 }
 
 /* Declare heights because of positioning of img element */
-.carousel-item {
+.carousel-frontpage .carousel-item {
   height: 32rem;
   background-position: center center;
   background-size: cover;
@@ -152,10 +144,7 @@
 .carousel-item-3 {
   background-image: url(./images/carousel-3.webp);
 }
-/* MARKETING CONTENT
--------------------------------------------------- */
 
-/* Center align the text within the three columns below the carousel */
 .marketing .col-lg-4 {
   margin-bottom: 1.5rem;
   text-align: center;
@@ -165,34 +154,16 @@
   margin-right: 0.75rem;
   margin-left: 0.75rem;
 }
-/* rtl:end:ignore */
-
-/* Featurettes
-------------------------- */
 
 .featurette-divider {
-  margin: 5rem 0; /* Space out the Bootstrap <hr> more */
+  margin: 5rem 0;
 }
 
-/* Thin out the marketing headings */
-/* rtl:begin:remove */
 .featurette-heading {
   letter-spacing: -0.05rem;
 }
 
-/* rtl:end:remove */
-
-/* RESPONSIVE CSS
--------------------------------------------------- */
-
 @media (min-width: 40em) {
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 1.25rem;
-    font-size: 1.25rem;
-    line-height: 1.4;
-  }
-
   .featurette-heading {
     font-size: 50px;
   }
@@ -219,11 +190,15 @@
   cursor: pointer;
 }
 .store-item:hover img {
-  transform: scale(1.06);
+  transform: scale(1.04);
   transition: transform 100ms linear;
 }
+
 .card-img-top-wrapper {
   aspect-ratio: 597 / 400;
+}
+.recipe-card-img-top-wrapper {
+  aspect-ratio: 312 / 231;
 }
 .featurette-image {
   aspect-ratio: 1 / 1;
@@ -236,4 +211,7 @@
 }
 .featurette-image-2 {
   background-image: url(./images/featurette-2.webp);
+}
+.card-img-top-wrapper {
+  aspect-ratio: 597 / 400;
 }
